--- a/src/components/molecules/scoreBoard/styles/score-board.css
+++ b/src/components/molecules/scoreBoard/styles/score-board.css
@@ -10,39 +10,12 @@
 .scoreboard__names {
   margin-right: 40px;
   margin-left: 4px;
-  font-size: 2.5em;
-
-  @media (max-width: 1200px) {
-    font-size: 2.2em;
-  }
-
-  @media (max-width: 1028px) {
-    font-size: 2em;
-  }
-
-  @media (max-width: 768px) {
-    display: none;
-  }
-
-  @media (max-width: 480px) {
-    display: none;
-  }
+  font-size: clamp(28px, 10vh, 56px);
 }
 
 .scoreboard__avatar {
   display: flex;
   align-items: center;
-
-  @media (max-width: 768px) {
-    margin-left: -5px;
-  }
-
-  @media (max-width: 480px) {
-    width: 110px;
-    margin-top: -60px;
-    margin-left: -10px;
-    margin-bottom: -60px;
-  }
 }
 
 .scoreboard-right__container {
@@ -50,6 +23,9 @@
   align-items: center;
   justify-content: center;
   margin-right: 40px;
+}
+.scoreboard__score-numeric {
+  font-size: clamp(28px, 10vh, 56px);
 }
 
 .scoreboard-info__image {
@@ -101,5 +77,4 @@
   cursor: pointer;
   width: clamp(24px, 4vw, 60px);
   height: clamp(24px, 4vw, 60px);
-  margin-left: 20px;
 }
